# Geneia

./: .gitignore  BUILD_SUMMARY.md  INSTALLER_GUIDE.md  LICENSE  README.md  RELEASES.md  RELEASE_NOTES_v1.0.0.md  build-installer.sh  geneia.tmLanguage.json  language-configuration.json  package.json  run_gui.sh
.github/workflows/: build-electron.yml
compiler/: Makefile  grammar.json  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  ui_bridge.cpp  ui_bridge.h
editors/: README.md
editors/emacs/: geneia-mode.el
editors/jetbrains/: Geneia.xml
editors/nano/: geneia.nanorc
editors/sublime/: Geneia.sublime-syntax
editors/vim/: geneia.vim
editors/vim/ftdetect/: geneia.vim
examples/: advanced.gn  advanced_pro.gn  all_functions_demo.gn  apple_3d.gn  complete_syntax.gn  convert_test.gn  correct_syntax.gn  create_gui.gn  custom_style.gn  extended_test.gn  final_syntax.gn  flag_test.gn  full_demo.gn  func_test.gn  gmath_test.gn  gnel_demo.gn  gnel_files.gn  grender_demo.gn  grender_json.gn  grender_term.gn  gui_app.gn  gweb_full.gn  gws_demo.gn  hello.gn  import_demo.gn  inner_test.gn  int_demo.gn  int_load_test.gn  int_run_test.gn  loop_test.gn  module_test.gn  mycommands.intcnf  mycommands.intpkf  new_functions.gn  opengsl_demo.gn  operators.gn  peat_demo.gn  pizza_3d.gn  premium.gn  quick_repeat.gn  (+19 more)
geneia-installer-app/: .gitignore  README.md  binding.gyp  build-installers.sh  package-lock.json  package.json  tailwind.config.ts  tsconfig.electron.json  tsconfig.json
geneia-installer-app/app/: globals.css  layout.tsx  page.tsx
geneia-installer-app/components/: DependencyCheck.tsx  InstallScreen.tsx  ProgressScreen.tsx  SuccessScreen.tsx  TitleBar.tsx  WelcomeScreen.tsx
geneia-installer-app/cpp/: file_operations.cpp  file_operations.h  installer.cpp  system_utils.cpp  system_utils.h
geneia-installer-app/electron/: main.ts  preload.ts
geneia-installer-app/release/: README-AppImage.md  README-deb.md  README-rpm.md
geneia-installer-app/types/: electron.d.ts
geneia-resource-web-center/: README.md  package-lock.json  package.json
geneia-resource-web-center/app/: page.tsx
geneia-resource-web-center/lib/: firebase.ts
geneia-studio-desktop/: BUILD.md  README.md  build-all.sh  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
geneia-studio-desktop/electron/: main.ts  tsconfig.json
geneia-studio-desktop/src/: App.tsx
geneia-studio-desktop/src/components/: ActivityBar.tsx  ContextMenu.tsx  DetachedWindow.tsx  Editor.tsx  EditorTabs.tsx  ErrorBoundary.tsx  ExtensionInfoPage.tsx  FindReplace.tsx  InputModal.tsx  KeyboardShortcuts.tsx  LanguageSelectorModal.tsx  OutputPanel.tsx  RemoteModal.tsx  SettingsModal.tsx  Sidebar.tsx  StatusBar.tsx  ThemeModal.tsx  TitleBar.tsx  Toast.tsx
geneia-studio-desktop/src/components/panels/: AccountPanel.tsx  ExtensionsPanel.tsx  GitPanel.tsx  RunPanel.tsx  SearchPanel.tsx  index.ts
geneia-studio-desktop/src/hooks/: useExtensions.ts  useGlobalErrorHandler.ts  useKeyboardShortcuts.ts
geneia-studio-desktop/src/interpreter/: GeneiaInterpreter.ts
geneia-studio-desktop/src/services/: auth.ts  extensionRuntime.ts  externalThemes.ts  fileIcons.tsx  geneiaGrammar.ts  globalProblems.ts  keyboardShortcuts.ts  languageRunner.ts  localization.ts  syntaxHighlighter.ts  vscodeMarketplace.ts
geneia-studio-desktop/src/store/: notificationStore.ts  useStore.ts
geneia-studio-desktop/src/styles/: globals.css
geneia-studio-desktop/src/types/: electron.d.ts
modules/: math_utils.gne  ui_helpers.gns
opengsl/: opengsl.h
opengsl-web/: index.html  package.json
opengsl-web/src/: App.css  App.tsx
opengsl-web/src/components/: Header.css  Header.tsx  Icons.tsx  ShapePreview.tsx
opengsl-web/src/pages/: Docs.css  Docs.tsx  OpenGSL.css  OpenGSL.tsx  Playground.css  Playground.tsx
scripts/: make_icon.js
ui/: GeneiaUI.csproj  GeneiaUIGenerator.csproj  GeneiaUIGenerator_standalone.cs  GeneiaUILinux.cs  GeneiaUILinux.csproj  GeneiaUIRuntime.cs  GeneiaUITerminal.cs  GeneiaUITerminal.csproj  MainForm.cs  Program.cs
website/: index.html  package.json
website/server/: index.ts
website/src/: App.tsx
website/src/components/: Footer.css  Footer.tsx  Header.css  Header.tsx  Icons.tsx
website/src/pages/: Docs.css  Docs.tsx  Download.css  Download.tsx  Extensions.css  Extensions.tsx  Home.css  Home.tsx  Playground.css  Playground.tsx
website/src/styles/: global.css
