! OpenGSL Demo - 2D, 2.5D, 3D Graphics !

"OpenGSL - Open Public Geneia Styling Library Demo"

import OpenGSL

! Create canvas !
.OpenGSL.canvas 'OpenGSL Demo' (800) (600)
.OpenGSL.bg '#1a1a2e'

! 2D Shapes !
.OpenGSL.color '#FF0000'
.OpenGSL.rect (50) (50) (100) (80)

.OpenGSL.color '#00FF00'
.OpenGSL.circle (250) (100) (50)

.OpenGSL.color '#0000FF'
.OpenGSL.ellipse (400) (100) (60) (40)

.OpenGSL.color '#FFFF00'
.OpenGSL.line (500) (50) (600) (150)

! 2.5D Isometric !
.OpenGSL.color '#FF7F00'
.OpenGSL.iso (100) (300) (80) (60) (40)

! 3D Shapes !
.OpenGSL.color '#00FFFF'
.OpenGSL.cube (300) (350) (0) (80)

.OpenGSL.color '#FF00FF'
.OpenGSL.sphere (450) (350) (0) (50)

.OpenGSL.color '#FFD700'
.OpenGSL.pyramid (600) (400) (0) (80) (100)

.OpenGSL.color '#32CD32'
.OpenGSL.cylinder (150) (500) (0) (40) (80)

! Text !
.OpenGSL.color '#FFFFFF'
.OpenGSL.text (300) (550) 'OpenGSL Graphics'

! Render !
.OpenGSL.render

exit (0)
